ignore the pptx with the info about scraping the supermarkets

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Added by Aitor
 precios.csv
 precios.xlsx
+resources/scrapear_supermarkets.pptx
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
