First working version

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Added by Aitor
 precios.csv
-precios.xlsx
+outputs/precios.xlsx
 resources/scrapear_supermarkets.pptx
 
 # Byte-compiled / optimized / DLL files
