working version, ready for new functionalities

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,31 @@ precios.csv
 outputs/precios.xlsx
 resources/scrapear_supermarkets.pptx
 
+.idea/
+
+# dotenv
+.env
+
+# virtualenv
+.venv
+venv/
+ENV/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
