--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Added by Aitor
 precios.csv
-outputs/precios.xlsx
-resources/scrapear_supermarkets.pptx
+src/price_tracker/outputs/precios.xlsx
+src/price_tracker/resources/scrapear_supermarkets.pptx
 
 .idea/
 
