--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas~=1.5.1
-bs4~=0.0.1
-beautifulsoup4~=4.11.1
-requests~=2.28.1
-numpy~=1.23.4
-requests-html~=0.10.0
-openpyxl~=3.0.10
+# Good practice to give specific versions here
+pandas==1.5.1
+bs4==0.0.1
+beautifulsoup4==4.11.1
+requests==2.28.1
+numpy==1.23.4
+requests-html==0.10.0
+openpyxl==3.0.10
