--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 precios.csv
 src/price_tracker/outputs/precios.xlsx
 src/price_tracker/resources/scrapear_supermarkets.pptx
-src/price_tracker/resources/pswd.txt
+src/price_tracker/resources/smtp.cfg
 
 .idea/
 
