--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ precios.csv
 src/price_tracker/outputs/precios.xlsx
 src/price_tracker/resources/scrapear_supermarkets.pptx
 src/price_tracker/resources/smtp.cfg
+prices-venv/
 
 .idea/
 
