--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
+# See https://www.youtube.com/watch?v=DhUpxWjOhME&list=PLBGK1GbF4FQ1a4vj16mlcvJz2w1eVYHA6&index=17
 [tox]
 minversion = 3.8.0
-envlist = py37, py39, flake8, mypy
+envlist = py39, flake8, mypy
 isolated_build = true
 
 [gh-actions]
@@ -17,7 +18,7 @@ deps =
 commands =
     pytest --basetemp={envtmpdir}
 
-# Not builtin environments
+# Not builtin environments. Therefore we must specify the config
 [testenv:flake8]
 basepython = python3.9
 deps = flake8
