--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 # Good practice to give specific versions here
-pandas==1.5.1
-bs4==0.0.1
-beautifulsoup4==4.11.1
-requests==2.28.1
-numpy==1.23.4
-requests-html==0.10.0
-openpyxl==3.0.10
+pandas>=1.5.1
+bs4>=0.0.1
+beautifulsoup4>=4.11.1
+requests>=2.28.1
+numpy>=1.23.4
+selenium>=4.6.0
+tomli>=2.0.1
+setuptools>=57.0.0
