--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,3 +3,11 @@ tox==3.24.3
 pytest==6.2.5
 pytest-cov==2.12.1
 mypy===0.910
+pandas>=1.5.1
+bs4>=0.0.1
+beautifulsoup4>=4.11.1
+requests>=2.28.1
+numpy>=1.23.4
+selenium>=4.6.0
+tomli>=2.0.1
+setuptools>=57.0.0
