--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ minversion = 3.8.0
 envlist = py39, flake8, mypy
 isolated_build = true
 
-[gh-actions]
+[gh-actions]  # This must be in sync what you define in the .github/workflows/test.yml
 python =
     3.9: py39, mypy, flake8  # For python 3.9, run the environments py39, mypy and flake8
 
