--- a/setup.cfg
+++ b/setup.cfg
@@ -6,11 +6,7 @@ license = MIT
 license_file = LICENSE
 platforms = unix, linux, osx, cygwin, win32
 classifiers =
-    Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
 
 [options]
@@ -23,20 +19,21 @@ install_requires =
     beautifulsoup4~=4.11.1
     requests~=2.28.1
     numpy~=1.23.4
-    requests-html~=0.10.0
     openpyxl~=3.0.10
-python_requires = >=3.6
+    selenium>=4.6.0
+    tomli>=2.0.1
+python_requires = >=3.9
 package_dir =
         =src
 zip_safe = no
 
 [options.extras_require]
 testing =
-    pytest>=6.0
-    pytest-cov>=2.0
-    mypy>=0.910
-    flake8>=3.9
-    tox>=3.24
+    pytest>=7.2
+    pytest-cov>=4.0
+    mypy>=0.991
+    flake8>=6.0
+    tox>=4.35
 
 [options.package_data]
 price_tracker = py.typed
